ipsec_PROGRAMS = conftest

AM_CFLAGS = -rdynamic

conftest_SOURCES = conftest.c conftest.h config.c config.h hooks/hook.h \
	actions.c actions.h

INCLUDES = \
	-I$(top_srcdir)/src/libstrongswan \
	-I$(top_srcdir)/src/libhydra \
	-I$(top_srcdir)/src/libcharon

conftest_LDADD = \
	$(top_builddir)/src/libstrongswan/libstrongswan.la \
	$(top_builddir)/src/libhydra/libhydra.la \
	$(top_builddir)/src/libcharon/libcharon.la \
	-lm $(PTHREADLIB) $(DLLIB)
